--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="key column-5-16">
                     <h3>RESPONSIVE DESIGN SPECIALIST</h3>
                     <p class="stick">∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙
-                        <img class="icon-choose" src="img/icon1.png" alt="icon">
+                        <img class="icon-choose icon-stick" src="img/icon1.png" alt="icon">
                        ∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙∙ 
                     </p>
                     <p class="tag">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</br></br>
@@ -216,6 +216,7 @@ Etiam eget libero et erat eleifend consectetur a nec lectus. Sed id tellus lorem
                 <p class="terms">Terms & Condition | Legal</p>
                 <p class="build">This web is built based on Codrops Theme. Edit by: FUCK Ngo</p>
             </div>
+            
         </div>
     </body>
 </html>
